--- a/eda_data_distribution.ipynb
+++ b/eda_data_distribution.ipynb
@@ -16,33 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: fire in c:\\users\\heoh\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 1)) (0.3.1)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\heoh\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 2)) (4.42.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\heoh\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 3)) (1.18.1)\n",
-      "Requirement already satisfied: six in c:\\users\\heoh\\anaconda3\\lib\\site-packages (from fire->-r requirements.txt (line 1)) (1.14.0)\n",
-      "Requirement already satisfied: termcolor in c:\\users\\heoh\\anaconda3\\lib\\site-packages (from fire->-r requirements.txt (line 1)) (1.1.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -52,10 +38,8 @@
       "\n",
       "Total playlists: 115071\n",
       "Splitting data...\n",
-      "Original train...\n",
-      "Original val...\n",
-      "Masked val...\n",
-      "Total: 23015, Song only: 6904, Song & Tags: 11508, Tags only: 3452, Title only: 1151\n"
+      "Generating questions...\n",
+      "ALL: 0, SONG_TAG: 8687, SONG_TITLE: 0, TAG_TITLE: 2762, SONG_ONLY: 9954, TAG_ONLY: 0, TITLE_ONLY: 1611, NOTHING: 0\n"
      ]
     }
    ],
@@ -67,7 +51,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### old split_data.py\n",
+    "\n",
+    "code:\n",
+    "```py\n",
+    "# old split_data.py\n",
+    "!python split_data.py run res/train.json\n",
+    "```\n",
+    "\n",
+    "output:\n",
+    "```\n",
+    "Reading data...\n",
+    "\n",
+    "Total playlists: 115071\n",
+    "Splitting data...\n",
+    "Original train...\n",
+    "Original val...\n",
+    "Masked val...\n",
+    "Total: 23015, Song only: 6904, Song & Tags: 11508, Tags only: 3452, Title only: 1151\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Define functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import read_json\n",
+    "from utils import count_questions_by_type"
    ]
   },
   {
@@ -76,70 +95,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import read_json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import enum\n",
-    "\n",
-    "\n",
-    "class QuestionType(enum.Enum):\n",
-    "    ALL = enum.auto()\n",
-    "    SONG_TAG = enum.auto()\n",
-    "    SONG_TITLE = enum.auto()\n",
-    "    TAG_TITLE = enum.auto()\n",
-    "    SONG_ONLY = enum.auto()\n",
-    "    TAG_ONLY = enum.auto()\n",
-    "    TITLE_ONLY = enum.auto()\n",
-    "    NOTHING = enum.auto()\n",
-    "\n",
-    "\n",
-    "def count_questions_by_type(questions):\n",
-    "    type_map = {\n",
-    "        # (songs, tags, title): question_type\n",
-    "        (True, True, True): QuestionType.ALL,\n",
-    "        (True, True, False): QuestionType.SONG_TAG,\n",
-    "        (True, False, True): QuestionType.SONG_TITLE,\n",
-    "        (False, True, True): QuestionType.TAG_TITLE,\n",
-    "        (True, False, False): QuestionType.SONG_ONLY,\n",
-    "        (False, True, False): QuestionType.TAG_ONLY,\n",
-    "        (False, False, True): QuestionType.TITLE_ONLY,\n",
-    "        (False, False, False): QuestionType.NOTHING,\n",
-    "    }\n",
-    "\n",
-    "    counts = {t: 0 for t in QuestionType}\n",
-    "\n",
-    "    for question in questions:\n",
-    "        songs = question['songs']\n",
-    "        tags = question['tags']\n",
-    "        title = question['plylst_title']\n",
-    "\n",
-    "        has_songs = len(songs) > 0\n",
-    "        has_tags = len(tags) > 0\n",
-    "        has_title = title != \"\"\n",
-    "\n",
-    "        question_type = type_map[has_songs, has_tags, has_title]\n",
-    "        counts[question_type] += 1\n",
-    "\n",
-    "    return counts\n",
-    "\n",
-    "\n",
     "def print_question_type_counts(counts):\n",
     "    for t, n in counts.items():\n",
-    "        print(f\"{t.name}: {n}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        print(f\"{t.name}: {n}\")\n",
+    "\n",
+    "\n",
     "def print_question_types(filename):\n",
     "    questions = read_json(filename)\n",
     "    counts = count_questions_by_type(questions)\n",
@@ -155,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -227,26 +187,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ALL: 8859\n",
-      "SONG_TAG: 0\n",
-      "SONG_TITLE: 9550\n",
-      "TAG_TITLE: 2618\n",
-      "SONG_ONLY: 0\n",
+      "ALL: 0\n",
+      "SONG_TAG: 8687\n",
+      "SONG_TITLE: 0\n",
+      "TAG_TITLE: 2762\n",
+      "SONG_ONLY: 9954\n",
       "TAG_ONLY: 0\n",
-      "TITLE_ONLY: 1988\n",
+      "TITLE_ONLY: 1611\n",
       "NOTHING: 0\n"
      ]
     }
    ],
    "source": [
     "print_question_types('arena_data/questions/val.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### old split_data.py\n",
+    "\n",
+    "code:\n",
+    "```py\n",
+    "print_question_types('arena_data/questions/val.json')\n",
+    "```\n",
+    "\n",
+    "output:\n",
+    "```\n",
+    "ALL: 8859\n",
+    "SONG_TAG: 0\n",
+    "SONG_TITLE: 9550\n",
+    "TAG_TITLE: 2618\n",
+    "SONG_ONLY: 0\n",
+    "TAG_ONLY: 0\n",
+    "TITLE_ONLY: 1988\n",
+    "NOTHING: 0\n",
+    "```"
    ]
   },
   {
