Add jupyter utils

--- a/development.ipynb
+++ b/development.ipynb
@@ -8,6 +8,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.jupyter_utils import log_cell\n",
+    "from utils.jupyter_utils import clear_logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clear_logs()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,51 +35,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Reading data...\n\nTotal playlists: 115071\nSplitting data...\nGenerating questions...\nALL: 0, SONG_TAG: 8687, SONG_TITLE: 0, TAG_TITLE: 2762, SONG_ONLY: 9954, TAG_ONLY: 0, TITLE_ONLY: 1611, NOTHING: 0\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python split_data.py run res/train.json --ratio=0.2 --suffix=\"02\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Reading data...\n\nTotal playlists: 115071\nSplitting data...\nGenerating questions...\nALL: 0, SONG_TAG: 87, SONG_TITLE: 0, TAG_TITLE: 27, SONG_ONLY: 99, TAG_ONLY: 0, TITLE_ONLY: 17, NOTHING: 0\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python split_data.py run res/train.json --ratio=0.002 --suffix=\"0002\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Reading data...\n\nTotal playlists: 115071\nSplitting data...\nGenerating questions...\nALL: 0, SONG_TAG: 43, SONG_TITLE: 0, TAG_TITLE: 13, SONG_ONLY: 50, TAG_ONLY: 0, TITLE_ONLY: 9, NOTHING: 0\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python split_data.py run res/train.json --ratio=0.001 --suffix=\"0001\""
    ]
@@ -71,6 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%log_cell\n",
+    "\n",
     "# 자가 테스트용\n",
     "!python grape_recommender.py run \\\n",
     "    --song_meta_fname=res/song_meta.json \\\n",
@@ -85,6 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%log_cell\n",
+    "\n",
     "# 자가 테스트용 채점\n",
     "!python evaluate.py evaluate \\\n",
     "    --gt_fname=arena_data/answers/val.json \\\n",
@@ -97,6 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%log_cell\n",
+    "\n",
     "# 리더보드 제출용\n",
     "!python grape_recommender.py run \\\n",
     "    --song_meta_fname=res/song_meta.json \\\n",
@@ -111,6 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%log_cell\n",
+    "\n",
     "# 최종 제출용\n",
     "!python grape_recommender.py run \\\n",
     "    --song_meta_fname=res/song_meta.json \\\n",
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,18 +195,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 제출용\n",
+    "train = read_json('./res/train.json')\n",
+    "genre_gn_all = read_json('./res/genre_gn_all.json')\n",
+    "song_meta = read_json('./res/song_meta.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "Building nodes: 100%|█████████▉| 822830/823084 [00:07<00:00, 114260.55it/s]\nBuilding edges: 100%|██████████| 823084/823084 [00:49<00:00, 16486.97it/s]\nCPU times: user 59.7 s, sys: 1.51 s, total: 1min 1s\nWall time: 1min\n"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%log_cell\n",
     "%%time\n",
     "import lib.graph\n",
     "%aimport -lib.graph.core\n",
@@ -208,18 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "Caching nodes: 100%|██████████| 1254916/1254916 [00:21<00:00, 57957.74it/s]\nCaching edges: 100%|██████████| 19106852/19106852 [01:24<00:00, 226939.01it/s]\nCaching union nodes: 3822911it [00:54, 69738.03it/s]\nCPU times: user 2min 38s, sys: 3.05 s, total: 2min 41s\nWall time: 2min 40s\n"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%log_cell\n",
     "%%time\n",
     "import lib.grape\n",
     "from constants import NUM_OF_RECOMMENDED_SONGS\n",
@@ -234,33 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "Fitting MostPopular model: 100%|██████████| 114841/114841 [00:10<00:00, 10518.98it/s]\nCPU times: user 11.8 s, sys: 70.6 ms, total: 11.9 s\nWall time: 11.8 s\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<lib.grape.grape.Grape at 0x7f4277eabc70>"
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%log_cell\n",
     "%%time\n",
     "grape.fit(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,18 +267,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 제출용\n",
+    "questions = read_json('./res/val.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "100%|██████████| 230/230 [01:24<00:00,  2.73it/s]\nMusic nDCG: 0.23854\nTag nDCG: 0.40505\nScore: 0.263517\n"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%log_cell\n",
     "from utils import validate_answers\n",
     "\n",
     "n_questions = 2000\n",
@@ -292,7 +295,56 @@
     "\n",
     "!python evaluate.py evaluate \\\n",
     "    --gt_fname=arena_data/answers/val.json \\\n",
-    "    --rec_fname=arena_data/results/results.json"
+    "    --rec_fname=arena_data/results/results.json \\\n",
+    "    --question_fname=arena_data/questions/val.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%log_cell\n",
+    "def predict_multi(questions):\n",
+    "    import multiprocessing as mp\n",
+    "    import numpy as np\n",
+    "    import itertools\n",
+    "\n",
+    "    jobs = mp.cpu_count()\n",
+    "    jobs = 2\n",
+    "    chunks = list(np.array_split(questions, jobs))\n",
+    "\n",
+    "    with mp.Pool() as pool:\n",
+    "        answers = pool.map(predict_job, chunks)\n",
+    "        return list(itertools.chain(*answers))\n",
+    "\n",
+    "\n",
+    "def predict_job(q):\n",
+    "    return grape.predict_all(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%log_cell\n",
+    "from utils import validate_answers\n",
+    "\n",
+    "n_questions = 2000000000\n",
+    "# n_questions = 200\n",
+    "# n_questions = 100\n",
+    "# answers = grape.predict_all(questions[:n_questions])\n",
+    "answers = predict_multi(questions[:n_questions])\n",
+    "validate_answers(answers, questions[:n_questions])\n",
+    "write_json(answers, './arena_data/results/results.json')\n",
+    "\n",
+    "# !python evaluate.py evaluate \\\n",
+    "#     --gt_fname=arena_data/answers/val.json \\\n",
+    "#     --rec_fname=arena_data/results/results.json \\\n",
+    "#     --question_fname=arena_data/questions/val.json"
    ]
   },
   {
@@ -387,6 +439,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:playground]",
+   "language": "python",
+   "name": "conda-env-playground-py"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -397,14 +454,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python_defaultSpec_1594380332073",
-   "display_name": "Python 3.8.3 64-bit"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
