--- a/grape_launcher.ipynb
+++ b/grape_launcher.ipynb
@@ -9,12 +9,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.jupyter_utils import log_cell\n",
+    "from utils.jupyter_utils import clear_logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clear_logs()"
    ]
   },
   {
@@ -92,6 +120,8 @@
     }
    ],
    "source": [
+    "%%log_cell\n",
+    "%%time\n",
     "recommender.read_and_fit(\n",
     "    song_meta_fname,\n",
     "    genre_fname,\n",
@@ -247,6 +277,7 @@
     }
    ],
    "source": [
+    "%%log_cell\n",
     "%%time\n",
     "recommender.read_and_predict(\n",
     "    question_fname,\n",
@@ -337,6 +368,8 @@
     }
    ],
    "source": [
+    "%%log_cell\n",
+    "%%time\n",
     "results = recommender.predict(questions, jobs)\n",
     "\n",
     "(total_music_ndcgs, total_tag_ndcgs, total_scores,\n",
