Remove deprecated codes

--- a/grape_launcher.ipynb
+++ b/grape_launcher.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from grape_recommender import GrapeRecommender\n",
     "from evaluate import ArenaEvaluator\n",
-    "from lib.new_grape import MelonGraph"
+    "from lib.grape import MelonGraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing data:   1%|          | 5296/822738 [00:00<00:15, 51812.21it/s]"
+      "Parsing data:   1%|          | 5349/822738 [00:00<00:15, 53488.14it/s]"
      ]
     },
     {
@@ -113,9 +113,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing data: 100%|██████████| 822738/822738 [00:39<00:00, 20905.61it/s]\n",
-      "Creating graph: 100%|██████████| 47119216/47119216 [02:06<00:00, 372391.02it/s] \n",
-      "Caching graph: 100%|██████████| 34405782/34405782 [00:47<00:00, 721088.36it/s] \n"
+      "Parsing data: 100%|##########| 822738/822738 [00:39<00:00, 21027.37it/s]\n",
+      "Creating graph: 100%|##########| 47119216/47119216 [02:06<00:00, 371919.06it/s] \n",
+      "Caching graph: 100%|##########| 34405782/34405782 [00:47<00:00, 724508.60it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 41s, sys: 6.23 s, total: 3min 47s\n",
+      "Wall time: 3min 46s\n"
      ]
     }
    ],
@@ -131,50 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recommender.set_params(**{\n",
-    "            'max_songs': 100,\n",
-    "            'max_tags': 10,\n",
-    "            'max_depth': 8,\n",
-    "            'relation_weight': {\n",
-    "                MelonGraph.Relation.ALBUM_TO_SONG: 0.01,\n",
-    "                MelonGraph.Relation.ALBUM_TO_WORD: 0,\n",
-    "                MelonGraph.Relation.ARTIST_TO_SONG: 0.01,\n",
-    "                MelonGraph.Relation.ARTIST_TO_WORD: 0,\n",
-    "                MelonGraph.Relation.ARTIST_GENRE_TO_SONG: 0.01,\n",
-    "                MelonGraph.Relation.GENRE_TO_SONG: 0.01,\n",
-    "                MelonGraph.Relation.MONTH_TO_SONG: 0,\n",
-    "                MelonGraph.Relation.PLAYLIST_TO_SONG: 0.01,\n",
-    "                MelonGraph.Relation.PLAYLIST_TO_TAG: 0.025,\n",
-    "                MelonGraph.Relation.PLAYLIST_TO_WORD: 0.025,\n",
-    "                MelonGraph.Relation.SONG_TO_ALBUM: 0.015,\n",
-    "                MelonGraph.Relation.SONG_TO_ARTIST: 0.015,\n",
-    "                MelonGraph.Relation.SONG_TO_ARTIST_DETAILED_GENRE: 0.015,\n",
-    "                MelonGraph.Relation.SONG_TO_ARTIST_GENRE: 0,\n",
-    "                MelonGraph.Relation.SONG_TO_DETAILED_GENRE: 0,\n",
-    "                MelonGraph.Relation.SONG_TO_GENRE: 0,\n",
-    "                MelonGraph.Relation.SONG_TO_MONTH: 0,\n",
-    "                MelonGraph.Relation.SONG_TO_PLAYLIST: 0.0075,\n",
-    "                MelonGraph.Relation.SONG_TO_YEAR: 0,\n",
-    "                MelonGraph.Relation.TAG_TO_PLAYLIST: 0.01,\n",
-    "                MelonGraph.Relation.TAG_TO_WORD: 0.01,\n",
-    "                MelonGraph.Relation.WORD_TO_ALBUM: 0,\n",
-    "                MelonGraph.Relation.WORD_TO_ARTIST: 0,\n",
-    "                MelonGraph.Relation.WORD_TO_PLAYLIST: 0.01,\n",
-    "                MelonGraph.Relation.WORD_TO_TAG: 0.001,\n",
-    "                MelonGraph.Relation.YEAR_TO_SONG: 0,\n",
-    "            },\n",
-    "            'song_relation_weight': None,\n",
-    "            'tag_relation_weight': None,\n",
-    "        })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,18 +197,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 48/48 [00:37<00:00,  1.27it/s]\n",
-      "100%|██████████| 48/48 [00:38<00:00,  1.25it/s]\n",
-      "100%|██████████| 48/48 [00:38<00:00,  1.25it/s]\n",
-      "100%|██████████| 48/48 [00:39<00:00,  1.23it/s]\n",
-      "100%|██████████| 48/48 [00:39<00:00,  1.22it/s]\n",
-      "100%|██████████| 48/48 [00:39<00:00,  1.20it/s]\n",
-      "100%|██████████| 48/48 [00:40<00:00,  1.19it/s]\n",
-      "100%|██████████| 48/48 [00:40<00:00,  1.19it/s]\n",
-      "100%|██████████| 48/48 [00:40<00:00,  1.19it/s]\n",
-      "100%|██████████| 48/48 [00:40<00:00,  1.18it/s]\n",
-      "100%|██████████| 48/48 [00:40<00:00,  1.17it/s]\n",
-      "100%|██████████| 48/48 [00:44<00:00,  1.07it/s]\n"
+      "100%|##########| 48/48 [00:27<00:00,  1.71it/s]\n",
+      "100%|##########| 48/48 [00:28<00:00,  1.69it/s]\n",
+      "100%|##########| 48/48 [00:28<00:00,  1.68it/s]\n",
+      "100%|##########| 48/48 [00:37<00:00,  1.26it/s]\n",
+      "100%|##########| 48/48 [00:37<00:00,  1.26it/s]\n",
+      "100%|##########| 48/48 [00:38<00:00,  1.26it/s]\n",
+      "100%|##########| 48/48 [00:38<00:00,  1.25it/s]\n",
+      "100%|##########| 48/48 [00:38<00:00,  1.24it/s]\n",
+      "100%|##########| 48/48 [00:38<00:00,  1.23it/s]\n",
+      "100%|##########| 48/48 [00:39<00:00,  1.23it/s]\n",
+      "100%|##########| 48/48 [00:39<00:00,  1.20it/s]\n",
+      "100%|##########| 48/48 [00:39<00:00,  1.20it/s]\n"
      ]
     },
     {
@@ -271,8 +236,8 @@
       "Music nDCG: 0.091708\n",
       "Tag nDCG: 0.33445\n",
       "Score: 0.128119\n",
-      "CPU times: user 438 ms, sys: 997 ms, total: 1.43 s\n",
-      "Wall time: 46.3 s\n"
+      "CPU times: user 652 ms, sys: 954 ms, total: 1.61 s\n",
+      "Wall time: 41.5 s\n"
      ]
     }
    ],
@@ -296,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,55 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]/1 [00:00<?, ?it/s]\n",
-      "0it [00:00, ?it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  4.17it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  3.68it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.65it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.40it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.17it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.21it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.14it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.01it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.57it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Warning] 제출한 정답이 부족합니다.\n",
-      "=== Total score ===\n",
-      "Music nDCG: 0.2808\n",
-      "Tag nDCG: 0.38219\n",
-      "Score: 0.296008\n",
-      "=== SONG_TAG score ===\n",
-      "Music nDCG: 0.423083\n",
-      "Tag nDCG: 0.444444\n",
-      "Score: 0.426287\n",
-      "=== TAG_TITLE score ===\n",
-      "Music nDCG: 0.187567\n",
-      "Tag nDCG: 0.213986\n",
-      "Score: 0.19153\n",
-      "=== SONG_ONLY score ===\n",
-      "Music nDCG: 0.270236\n",
-      "Tag nDCG: 0.254917\n",
-      "Score: 0.267938\n",
-      "=== TITLE_ONLY score ===\n",
-      "Music nDCG: 0.0\n",
-      "Tag nDCG: 1.0\n",
-      "Score: 0.15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%log_cell\n",
     "%%time\n",
